<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@android:drawable/ic_menu_myplaces" />
    <item
        android:id="@+id/nav_transactions"
        android:title="@string/nav_transactions"
        android:icon="@android:drawable/ic_menu_agenda" />
    <item
        android:id="@+id/nav_goals"
        android:title="@string/nav_goals"
        android:icon="@android:drawable/ic_menu_gallery" />
    <item
        android:id="@+id/nav_saha"
        android:title="@string/nav_saha"
        android:icon="@android:drawable/ic_menu_help" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@android:drawable/ic_menu_manage" />
</menu>
